# Mathematics-Artwork

./: README.md  pyproject.toml
assets/: math-art-to-emulate.md
